Add new module PGN-lichess.org

--- a/PGN-parent/pom.xml
+++ b/PGN-parent/pom.xml
@@ -17,6 +17,7 @@
     <module>../PGN-chess.com</module>
     <module>../PGN-playchess.com</module>
     <module>../PGN-chessclub.com</module>
+    <module>../PGN-lichess.org</module>
   </modules>
 
   <dependencies>
