--- a/PGN-parent/pom.xml
+++ b/PGN-parent/pom.xml
@@ -29,6 +29,13 @@
       <version>${antlr4.version}</version>
     </dependency>
 
+    <!-- Apache IO -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+
     <!-- JUnit 5 -->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
