Try more examples

--- a/PGN-parent/pom.xml
+++ b/PGN-parent/pom.xml
@@ -21,6 +21,13 @@
     <module>../PGN-converter</module>
   </modules>
 
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
+
   <dependencies>
 
     <!-- Antlr4 -->
